<resources>
    <string name="app_name">mE Health</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_here">Enter here</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot">Forgot?</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="already_me_user">Already a <font color='#FF6605'>mE</font> User</string>
    <string name="sign_up">Don\'t have an account? <font color='#FF6605'>Sign up</font></string>
    <string name="how_can_help_you">How can I help you today?</string>
    <string name="ai_assistant">AI Assistant</string>
    <string name="read_more">Read more</string>
    <string name="data_marketplace">Data Marketplace</string>
    <string name="menu">Menu</string>
    <string name="voice">Voice</string>
    <string name="dashboard">Dashboard</string>
    <string name="ok">Ok</string>
    <string name="search_by">Search by Name, City or Country</string>
    <string name="connect_provider">Connect to Your Provider</string>
    <string name="assist">Assist</string>
    <string name="advice">Advice</string>
    <string name="recover_access">Recover Access</string>
    <string name="send">Send</string>
    <string name="back_login">Back to  <font color='#FF6605'>Login</font></string>
    <string name="welcome_back">Welcome Back</string>
    <string name="continue_">Continue</string>
    <string name="your_shadow_brain">Your shadow brain...</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="country_code">Country Code</string>
    <string name="phone_no">Phone No.</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="address_one">Address 1</string>
    <string name="address_two">Address 2</string>
    <string name="zipcode">Zipcode</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="street_address">Street Address (e.g., 123 Main St)</string>
    <string name="apt_unit">Apt/Unit # e.g., Apt 4B, Suit 200</string>
    <string name="where_did_you_here">Where did you hear about</string>
    <string name="question_text">\?</string>
    <string name="from_friend_family">From friends or family</string>
    <string name="social_media">Social media</string>
    <string name="online_advertisement">Online advertisement</string>
    <string name="search_engine">Search engine</string>
    <string name="setting_up_your_profile">Setting Up Your Profile</string>
    <string name="all_set">All Set</string>
    <string name="my_persona">My Persona</string>
    <string name="settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="whoops">Whoops!</string>
    <string name="cancel">Cancel</string>
    <string name="my_chart">MyChart</string>
    <string name="connect">Connect</string>
    <string name="all">All</string>
    <string name="recent">Recent</string>
    <string name="connected">Connected</string>
    <string name="dis_connected">Disconnect</string>
    <string name="me_ai_assistant">mE AI Assistant</string>
    <string name="market_place_read_more">The Data Marketplace is where users like you can turn the data you generate every day—like your browsing history, shopping habits, travel plans, and more—into a valuable asset.

\n\nYou get to decide what data to share, who can buy it, and how it’s used. It’s a secure space that puts you in control, letting you monetize your data directly while ensuring transparency and trust with buyers</string>
    <string name="ai_assistant_read_more">The AI Assistant in mEinstein is your personal, intelligent helper that lives right in the app. It’s designed to understand your preferences, habits, and goals—then use that knowledge to help you make decisions, organize your life, and find insights that matter to you.

\n\nThink of it as a digital sidekick, always ready to offer suggestions, reminders, and personalized advice to help you get the most out of your data and daily routines.</string>
    <string name="my_profile">My Profile</string>
    <string name="my_health">My Health</string>
    <string name="health">Health</string>
    <string name="practitioner">Practitioner</string>
    <string name="list_of_practitioner">List of Practitioner</string>
    <string name="search_allergies">Search allergies....</string>
    <string name="list_of_appointments">List of Appointments</string>
    <string name="list_of_conditions">List of Conditions</string>
    <string name="list_of_labs">List of Lab Reports</string>
    <string name="list_of_medications">List of Medications</string>
    <string name="list_of_visits">List of Visits</string>
    <string name="list_of_procedures">List of Procedures</string>
    <string name="list_of_allergies">List of Allergies</string>
    <string name="list_of_immunizations">List of Immunizations</string>
    <string name="list_of_billings">List of Billing</string>
    <string name="list_of_vitals">List of Vitals</string>
    <string name="appointment_description">Based on the data provided, here is some advice on savings ratio for your finance profile:\n\n. Understand Your Financial Goals: Start by identifying your short-term and long-term financial goals. Whether it\'s saving for a vacation, emergency fund, retirement, or any other goal, having clarity on what you are saving for will help determine your savings ratio.\n\n2. *Assess Your Current Financial Situation:* Review your income, expenses, assets, liabilities, and spending habits. Understanding your cash flow will give you a clear \n\n</string>
    <string name="detail">Details</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="appointments">Appointments</string>
    <string name="organizations">Organizations</string>
    <string name="view_all">View all</string>
    <string name="visits">Visits</string>
    <string name="results">Results</string>
    <string name="lab">Lab</string>
    <string name="back">Back</string>
    <string name="edit_appointment">Edit Appointment</string>
    <string name="edit_medication">Edit Medication</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="medication">Medication</string>
    <string name="medication_id">Medication ID</string>
    <string name="dosage_instruction">Dosage Instruction</string>
    <string name="a">Or</string>
    <string name="reason">Reason</string>
    <string name="sync_data">Sync Data</string>
    <string name="share_record">Share Record</string>
    <string name="vital">Vital</string>
    <string name="final_">Final</string>
    <string name="patient_name">Patient Name</string>
    <string name="vital_id">Vital ID</string>
    <string name="visits_status">Visits Status</string>
    <string name="in_progress">In-progress</string>
    <string name="log_new_vital">Log New Vital</string>
    <string name="clinical_status">Clinical Status</string>
    <string name="recorded_date">Recorded Date</string>
    <string name="active">Active</string>
    <string name="allergy_id">Allergy ID</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="completed">Completed</string>
    <string name="add_immunization">Add Immunization</string>
    <string name="record_details">Record Details</string>
    <string name="immunization_id">Immunization ID</string>
    <string name="location">Location</string>
    <string name="provider">Provider</string>
    <string name="planned">Planned</string>
    <string name="insurance_company">Insurance Company</string>
    <string name="coverage_type">Coverage Type</string>
    <string name="plan_id">Plan ID</string>
    <string name="view_invoice">View Invoice</string>
    <string name="billing">Billing</string>
    <string name="list_of_file">List of File</string>
    <string name="category_">Category : </string>
    <string name="upload">Upload</string>
    <string name="procedure_details">Procedure Details</string>
    <string name="procedure_id">Procedure ID</string>
    <string name="procedure">Procedure</string>
    <string name="add_follow_up">Add Follow-Up</string>
    <string name="visit_detail">Visit Details</string>
    <string name="visit_id">Visit ID</string>
    <string name="status">Status</string>
    <string name="type">Type</string>
    <string name="network_error">There\'s no network connection right now. Please check your Wifi connection or mobile data.</string>
    <string name="edit">Edit</string>
    <string name="basic_details">Basic Details</string>
    <string name="phone">Phone</string>
    <string name="anniversary">Anniversary</string>
    <string name="married">Married</string>
    <string name="gender">Gender</string>
    <string name="apply">Apply</string>
    <string name="no_record_found">No records found in this range.</string>
    <string name="maybe_your_body">Maybe your body was just busy being awesome.</string>
    <string name="onset">Onset</string>
    <string name="practitioners">Practitioners</string>
    <string name="vitals">Vitals</string>
    <string name="labs">Labs</string>
    <string name="add_related_data">Add Related Data</string>
    <string name="current_details">Current Details</string>
    <string name="list_of_practitioners">List Of Practitioners</string>
    <string name="condition">Condition</string>
    <string name="treatment">Treatment</string>
    <string name="booked">Booked</string>
    <string name="lab_result">Lab Result</string>
    <string name="hemoglobin">Hemoglobin</string>
    <string name="medical_documents">Medical Documents</string>
    <string name="user_content">User Content</string>
    <string name="data_items">Data Items</string>
    <string name="my_settings">My Settings</string>
    <string name="preferences">Preferences</string>
    <string name="update_preferences">Update Preferences</string>
    <string name="change_password">Change Password</string>
    <string name="connected_accounts">Connected Accounts</string>
    <string name="health_care">Health Care</string>
    <string name="transactions">Transactions</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="allow_location_access">Allow Location Access</string>
    <string name="never">Never</string>
    <string name="while_using_app">While Using The App</string>
    <string name="list_of_imagings">List of Imaging</string>
    <string name="imaging">Imaging</string>
    <string name="image_report">6 Image <b>Report.jpg</b></string>
    <string name="looking_for_practitioner">Looking for Practitioner?</string>
    <string name="practitioner_empty_description">Your practitioner timeline is just a calendar pick away!</string>
    <string name="select_date">Select Date</string>
    <string name="value_with_unit">%1$s %2$s</string>
    <string name="start_date_with_value">Start Date: %1$s</string>
    <string name="conditions">Conditions</string>
    <string name="medications">Medications</string>
    <string name="procedures">Procedures</string>
    <string name="allergies">Allergies</string>
    <string name="immunizations">Immunizations</string>
    <string name="immunization">Immunization</string>
    <string name="billings">Billing</string>
    <string name="imagings">Imaging</string>
    <string name="record_vaults">Record Vault</string>
    <string name="cancelled">Cancelled</string>
    <string name="not_available">Not available\n</string>
    <string name="dd_mm_yyyy">MM-DD-YYYY</string>
    <string name="practitioner_no_record_title">No records found in this range.</string>
</resources>