<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp_20">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_85"
            android:src="@drawable/ic_login_logo" />

        <TextView
            style="@style/textStyleBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_18" />

        <com.mE.Health.utility.roundview.RoundLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="vertical"
            android:padding="@dimen/dp_12"
            app:rv_cornerRadius="@dimen/dp_6"
            app:rv_strokeColor="@color/color_c8c8c8"
            app:rv_strokeWidth="@dimen/dp_1">

            <TextView
                style="@style/textStyleSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/color_2b2b2b"
                android:textSize="@dimen/sp_12" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_email" />

                <EditText
                    style="@style/textStyleRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_toRightOf="@+id/ivUser"
                    android:hint="@string/enter_email"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_333333"
                    android:textColorHint="@color/color_c8c8c8"
                    android:textSize="@dimen/sp_14" />

            </RelativeLayout>


        </com.mE.Health.utility.roundview.RoundLinearLayout>

        <com.mE.Health.utility.roundview.RoundLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="vertical"
            android:padding="@dimen/dp_12"
            app:rv_cornerRadius="@dimen/dp_6"
            app:rv_strokeColor="@color/color_c8c8c8"
            app:rv_strokeWidth="@dimen/dp_1">

            <TextView
                style="@style/textStyleSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/color_2b2b2b"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivLock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_lock" />

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/textStyleRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/ivLock"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingRight="@dimen/dp_30"
                    android:textColor="@color/color_333333"
                    android:textColorHint="@color/color_c8c8c8"
                    android:textSize="@dimen/sp_14" />

                <ImageView
                    android:id="@+id/ivEye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_eye" />
            </RelativeLayout>

        </com.mE.Health.utility.roundview.RoundLinearLayout>

        <TextView
            android:id="@+id/tvForgot"
            style="@style/textStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:text="@string/forgot"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_12" />

        <com.mE.Health.utility.roundview.RoundTextView
            android:id="@+id/tvLogin"
            style="@style/textStyleSemiBold"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_17"
            app:rv_backgroundColor="@color/color_FF6605"
            app:rv_isRadiusHalfHeight="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_35"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/color_dadada" />

            <TextView
                style="@style/textStyleRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/dp_5"
                android:text="@string/or"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_12" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/color_dadada" />

        </LinearLayout>

        <com.mE.Health.utility.roundview.RoundTextView
            android:id="@+id/tvAlreadyUser"
            style="@style/textStyleRegular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_35"
            android:gravity="center"
            android:text="@string/already_me_user"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_17"
            app:rv_backgroundColor="@color/color_333333"
            app:rv_isRadiusHalfHeight="true" />

        <TextView
            android:id="@+id/tvSignup"
            style="@style/textStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_35"
            android:text="@string/sign_up"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>