<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llEmptyLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_20"
    android:orientation="vertical"
    android:visibility="gone"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:id="@+id/ivEmptyType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/practitioner_blank_screen" />

    <TextView
        android:id="@+id/tvEmptyTitle"
        style="@style/textStyleBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center"
        android:text="@string/looking_for_practitioner"
        android:textColor="@color/text_color_primary"
        android:textSize="@dimen/sp_12" />

    <TextView
        android:id="@+id/tvEmptyDescription"
        style="@style/textStyleSemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:text="@string/practitioner_empty_description"
        android:textColor="@color/text_color_primary"
        android:textSize="@dimen/sp_12" />


    <com.mE.Health.utility.roundview.RoundTextView
        android:id="@+id/tvSelectDate"
        style="@style/textStyleSemiBold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/select_date"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_17"
        android:visibility="gone"
        app:rv_backgroundColor="@color/color_FF6605"
        app:rv_isRadiusHalfHeight="true" />

</LinearLayout>