<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:orientation="vertical"
            android:overScrollMode="never">

            <TextView
                style="@style/textStyleBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_settings"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_34" />


            <TextView
                style="@style/textStyleBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/preferences"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_20" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dp_9"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/white">


                <TextView
                    style="@style/textStyleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock_orange"
                    android:drawableRight="@drawable/ic_right_arrow_light_gray"
                    android:drawablePadding="@dimen/dp_15"
                    android:padding="@dimen/dp_20"
                    android:text="@string/change_password"
                    android:textColor="@color/color_6E6B78"
                    android:textSize="@dimen/sp_18" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dp_9"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/white">

                <TextView
                    style="@style/textStyleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_update_preference"
                    android:drawableRight="@drawable/ic_right_arrow_light_gray"
                    android:drawablePadding="@dimen/dp_15"
                    android:padding="@dimen/dp_20"
                    android:text="@string/update_preferences"
                    android:textColor="@color/color_6E6B78"
                    android:textSize="@dimen/sp_18" />

            </androidx.cardview.widget.CardView>


            <TextView
                style="@style/textStyleBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/connected_accounts"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_20" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dp_9"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/white">


                <TextView
                    style="@style/textStyleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_health_care"
                    android:drawableEnd="@drawable/ic_right_arrow_light_gray"
                    android:drawablePadding="@dimen/dp_15"
                    android:padding="@dimen/dp_20"
                    android:text="@string/health_care"
                    android:textColor="@color/color_6E6B78"
                    android:textSize="@dimen/sp_18" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dp_9"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/white">

                <TextView
                    style="@style/textStyleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_transaction"
                    android:drawableRight="@drawable/ic_right_arrow_light_gray"
                    android:drawablePadding="@dimen/dp_15"
                    android:padding="@dimen/dp_20"
                    android:text="@string/transactions"
                    android:textColor="@color/color_6E6B78"
                    android:textSize="@dimen/sp_18" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dp_9"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/white">

                <TextView
                    style="@style/textStyleMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_bank_account"
                    android:drawableRight="@drawable/ic_right_arrow_light_gray"
                    android:drawablePadding="@dimen/dp_15"
                    android:padding="@dimen/dp_20"
                    android:text="@string/bank_accounts"
                    android:textColor="@color/color_6E6B78"
                    android:textSize="@dimen/sp_18" />

            </androidx.cardview.widget.CardView>


            <TextView
                style="@style/textStyleBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/allow_location_access"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_20" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dp_9"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_20">

                    <TextView
                        style="@style/textStyleMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_never"
                        android:drawablePadding="@dimen/dp_15"
                        android:gravity="center_vertical"
                        android:text="@string/never"
                        android:textColor="@color/color_6E6B78"
                        android:textSize="@dimen/sp_18" />


                    <ImageView
                        android:id="@+id/ivToggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:src="@drawable/toggle_off" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/dp_9"
                app:cardUseCompatPadding="true"
                app:strokeColor="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/dp_20">

                    <TextView
                        style="@style/textStyleMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_play_video"
                        android:drawablePadding="@dimen/dp_15"
                        android:gravity="center_vertical"
                        android:text="@string/while_using_app"
                        android:textColor="@color/color_6E6B78"
                        android:textSize="@dimen/sp_18" />


                    <ImageView
                        android:id="@+id/ivVideoToggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:src="@drawable/toggle_off" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <include layout="@layout/bottom_view" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>